<<<<<<< ChangeLog
2012-08-05 Simon Knutzen <knutzen -at- physik.rwth-aachen.de>
	*new Dimuon varibles
	*new photon isolation
	*update to CMSSW_5_3_x

=======
2012-07-27 Julien Caudron <julien.caudron -at- physik.rwth-aachen.de>
	* Boolean branches in the skimmer have been changed to integer
	* hadTowOverEm added for photon
	* photon pf isolation reprocessing from the 25th may update
>>>>>>> 1.42
2012-05-09 Klaas Padeken <padeken -at- physik.rwth-aachen.de> Simon Knutzen <knutzen -at- physik.rwth-aachen.de> Jan Schulte <jschulte -at - physik.rwth-aache.de>
	* Number of True Interactions
    * Electron HEEP Corrections
    * Some new muon variables
    * rho for Electrons
    * corrected Electron isolation
    * Electron Classifications
2012-04-03 Simon Knutzen <knutzen -at- physik.rwth-aachen.de>
	* Taus working now
	* Changed tau discriminator for HPS PFToPAT selection
	* Add new tau variables
2012-03-19 Sebastian Thüer <thuer -at- physik.rwth-aachen.de>
	* Prepared the skimmer for 5_2_X
	* Taus not working ...
	* Removed METFilters (have to be checked)
2012-03-15 Sebastian Thüer <thuer -at- physik.rwth-aachen.de>
	* Prepared the skimmer for 5_1_X
	* Adjusted Cocktail reco
	* Taus are available, added safety checks, 
	  still need to be adjusted to the up to date recommendations
	* Type1 MET corrections fixed to the changes in the release
2012-01-04 Jan Schulte <jschulte -at - physik.rwth-aache.de>
	* fixed PF Muons
	* changed PF Isolation to work with 4_4_X
	* prepare script now reads cuts from config and checks them
	* HBHE noise filter
	* event filtering (beam scraping & total kinematics)
	* taus are now optional 
	* photons are now in, done by Julien
	* HCAL noise infos removed
	* fixed a bug in single muon skims 
2011-11-02 Klaas Padeken <padeken -at- physik.rwth-aachen.de>
	* type 1 met correction for pf met two
    * corrected TreeContent.h
    * new prepare script
    * merged config pyton
2011-10-26 Klaas Padeken <padeken -at- physik.rwth-aachen.de>